# glance

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-23-crew.md  2026-05-23-health.md  2026-05-25-tasks.md  2026-05-26-cal.md  2026-06-06-vitals.md  2026-06-19-claude-usage-gauges.md
docs/superpowers/specs/: 2026-05-23-crew-design.md  2026-05-23-health-design.md  2026-05-25-tasks-design.md  2026-05-26-cal-design.md  2026-06-05-music-panel-controls-design.md  2026-06-06-vitals-design.md  2026-06-08-music-standalone-design.md  2026-06-10-vitals-top-processes-design.md  2026-06-19-claude-usage-gauges-design.md
src/: app.rs  brightness.rs  clip.rs  config.rs  footer.rs  header.rs  layout.rs  lib.rs  main.rs  spawn.rs  theme.rs  usage.rs  vitals.rs  widgets.rs
src/cal/: bridge.rs  desc.rs  event.rs  mod.rs  view.rs
src/crew/: job.rs  mod.rs
src/health/: config.rs  log_entry.rs  migrate.rs  mod.rs  store.rs  view.rs
src/panels/: alerts.rs  battery.rs  cal.rs  clock.rs  commits.rs  conn.rs  cpu.rs  crew.rs  disk.rs  entropy.rs  fans.rs  gpu.rs  health.rs  hurricane.rs  io.rs  issues.rs  launchers.rs  loadavg.rs  mandala.rs  mascot.rs  mem.rs  mod.rs  moon.rs  music.rs  net.rs  peon.rs  pet.rs  ping.rs  prs.rs  solar.rs  standup.rs  starfield.rs  tasks.rs  temp.rs  timer.rs  traceroute.rs  tsmap.rs  usage.rs  water.rs  weather.rs  (+1 more)
src/tasks/: mod.rs  session.rs  store.rs  task.rs  view.rs
