[package]
name = "glance"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
sysinfo = "0.32"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jiff = "0.2"
fs2 = "0.4"
suite-term = { git = "https://github.com/JaneAdora/suite-term", rev = "eec40bcd1516156d5245ef73aeb4a5aef243d497", features = ["clipboard", "panic-hook"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
